--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,10 +5,10 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "C#: ResultPattern Debug",
+            "name": "C#: BookSearch Debug",
             "type": "dotnet",
             "request": "launch",
-            "projectPath": "${workspaceFolder}/ResultPattern.csproj"
+            "projectPath": "${workspaceFolder}/BookSearch.csproj"
         }
 
     ]
